--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -64,11 +64,10 @@ projects:
 #-------------------------------
 # Contact Section
 
-social:
-- {icon: 'twitter', link: '#'}
-- {icon: 'instagram', link: '#'}
-- {icon: 'github', link: '#'}
-- {icon: 'linkedin', link: '#'}
-- {icon: 'envelope', link: 'mailto:#'}
-
+#social:
+#- {icon: 'twitter', link: '#'}
+#- {icon: 'instagram', link: '#'}
+#- {icon: 'github', link: '#'}
+#- {icon: 'linkedin', link: '#'}
+#- {icon: 'envelope', link: 'mailto:#'}
 # social network icons available: 'twitter' / 'facebook' / 'github' / 'pinterest' 'google-plus' / 'linkedin' / 'youtube' / 'instagram' / 'dribbble' / 'behance' / 'soundcloud' / 'vine'
