--- a/_config.yml
+++ b/_config.yml
@@ -15,4 +15,4 @@ sass:
 title:		           "Pratisamvid"
 description:	       "A unit of S K R 9 Traders"
 author:              "Anagha Karanam"
-logo:               "/assets/images/logo.png"
+logo:               "/assets/img/logo.png"
