--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -55,10 +55,10 @@ contact: >
 # Work Section
 
 projects:
+- {name: 'About Me', folder: 'proj-4', file: 'projects/about_me.html'}
 - {name: 'Do Binge Watchers order food online? The problem of Program Evaluation', folder: 'proj-1', file: 'projects/Program_Evaluation.html'}
 - {name: 'Solving Lead Generation problem & The Lean Analytics Cycle', folder: 'proj-2', file: 'projects/Lead_Generation.html'}
 - {name: 'Assignment1 Python Basics', folder: 'proj-3', file: 'projects/assignment1_python.html'}
-#- {name: 'Project Four', folder: 'proj-4', file: 'projects/proj-4.html'}
 #- {name: 'Project Five', folder: 'proj-5', file: 'projects/proj-5.html'}
 
 #-------------------------------
